# social-media-assistant

./: .env  README.md  db.sqlite3  manage.py  pyproject.toml
assistant/: admin.py  forms.py  models.py  urls.py  views.py
assistant/migrations/: 0001_initial.py  0002_socialmediaapikey.py
socialmedia_assistant/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
templates/: base.html
templates/social_media/: create_post.html  post_success.html  settings_menu.html
utils/: chatgpt_selenium_post.py  linkedin_connector.py  page_source.html
