[project]
name = "social-media-assistant"
version = "0.1.0"
description = "It will manage your social medias"
authors = [
    {name = "Amir Behvandi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django (>=5.1.5,<6.0.0)", "selenium (>=4.28.1,<5.0.0)", "python-dotenv (>=1.0.1,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
